Error Prone: Apply auto-fixed for Error Prone check "JdkObsolete"
This does:
Queue<Foo> foo = new LinkedList() --> new ArrayDeque()
List<Foo> foo = new LinkedList() --> new ArrayList()

It does not touch:
LinkedList<Foo> foo = new LinkedList().

I reviewed the changes and made minor tweaks (PS1->PS4)

Bug: 40661145
Change-Id: Ica38aedc4b00f5f01034700a04d80f75376ef3c4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6951112
Commit-Queue: Andrew Grieve <agrieve@chromium.org>
Commit-Queue: Henrique Nakashima <hnakashima@chromium.org>
Auto-Submit: Andrew Grieve <agrieve@chromium.org>
Owners-Override: Andrew Grieve <agrieve@chromium.org>
Reviewed-by: Henrique Nakashima <hnakashima@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1516132}